--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,30 @@
             "email": "me@briant.me"
         }
     ],
+
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "brianteachman/tweb",
+                "version": "dev-master",
+                "source": {
+                    "url": "git://github.com/brianteachman/tweb.git",
+                    "type": "git",
+                    "reference": "master"
+                },
+                "autoload": {
+                    "psr-0" : {
+                        "TWeb": "src/"
+                    }
+                }
+            }
+        }
+    ],
+
     "minimum-stability": "dev",
     "require": {
-        "zendframework/zendframework": "dev-master",
+        "php": ">=5.3.0",
+        "zendframework/zendframework": "dev-master"
     }
 }
